# beetle_fraction

./: Cargo.toml
src/: big_fraction.rs  fraction.rs  lib.rs  macros.rs  ops.rs  traits.rs  types.rs
tests/: lib_test.rs
