[package]
name = "beetle-fraction"
version = "0.2.3"
edition = "2021"
authors = ["beetle"]
license = "MIT"
description = "functions & structs for doing math with fractions."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
num = "0.4.0"
num-traits = "0.2.15"

[dev-dependencies]
rand = "0.8.5"
