[package]
name = "beetle-fraction"
version = "0.2.4"
edition = "2021"
authors = ["beetle"]
license = "MIT"
description = "functions & structs for doing math with fractions."
repository = "https://github.com/Mearkatz/beetle_fraction"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-traits = "0.2.15"

[dev-dependencies]
rand = "0.8.5"
